syntax = "proto3";
package pluginv2;

option go_package = "./;pluginv2";

import "google/protobuf/any.proto";

//-----------------------------------------------
// Common
//-----------------------------------------------

message AppInstanceSettings {
  bytes jsonData = 3;
  map<string,string> decryptedSecureJsonData = 4;
  int64 lastUpdatedMS = 5;
}

message DataSourceInstanceSettings {
  int64 id = 1;
  string name = 2;
  string url = 3;
  string user = 4;
  string database = 5;
  bool basicAuthEnabled = 6;
  string basicAuthUser = 7;
  bytes jsonData = 8;
  map<string,string> decryptedSecureJsonData = 9;
  int64 lastUpdatedMS = 10;
  string uid = 11;
}

message User {
  string login = 1;
  string name = 2;
  string email = 3;
  string role = 4;
}

message PluginContext {
  // The Grafana organization id the request originating from.
  int64 orgId = 1;

  // The unique identifier of the plugin the request  originating from.
  string pluginId = 2;

  // The Grafana user the request originating from.
  //
  // Will not be provided if Grafana backend initiated the request.
  User user = 3;

  // App plugin instance settings is the configured app instance settings.
  // In Grafana an app instance is an enabled app plugin in a
  // Grafana organization.
  //
  // Will only be set if request targeting an app instance.
  AppInstanceSettings appInstanceSettings = 4;

  // Data source instance settings is the configured data source instance
  // settings. In Grafana a data source instance is a created data source
  // in a Grafana organization.
  //
  // Will only be set if request targeting a data source instance.
  DataSourceInstanceSettings dataSourceInstanceSettings = 5;

  // TODO better name and comment?
  // Callback Server ID is the broker ID that can be used to callback Grafana
  // server for bi-directonnal communications.
	uint32 callbackServerID = 6;
}

//-------------------------------------------
// Common: Access Control
//-------------------------------------------

/* Types */

message Permission {
  string action = 1;
  string scope = 2;
}

message Role {
  string name = 1;
  string uid = 2;
  int64 version = 3;
  string displayName = 4;
  string description = 5;
  string group = 6;
  bool hidden = 7;
  repeated Permission permissions = 8;
}

message RoleRegistration {
  Role role = 1;
  repeated string Grants = 2;
}

message PermissionEvaluator {
  string action = 1;
  repeated string scope = 2;
}

message AnyEvaluator {
  repeated google.protobuf.Any anyOf = 1;
}

message AllEvaluator {
  repeated google.protobuf.Any allOf = 1;
}

message Evaluator {
  google.protobuf.Any ev = 1;
}

/* Requests and Responses */ 
message QueryPluginRolesRequest {
  PluginContext pluginContext = 1;
}

message QueryPluginRolesResponse {
  repeated RoleRegistration registrations = 1;
}

message HasAccessRequest {
  User user = 1;
  Evaluator evaluator = 2;
}

message HasAccessResponse {
  bool hasAccess = 1;
}

message IsDisabledResponse {
  bool isDisabled = 1;
}

message Void {}

/* Services */
// Service implemented by Grafana for callbacks from the plugin
service AccessControl {
  rpc IsDisabled(Void) returns (IsDisabledResponse);
  rpc HasAccess(HasAccessRequest) returns (HasAccessResponse);
}

// Service implemented by the plugin to register its custom roles and their assignments
service RoleRegistrer {
  rpc QueryPluginRoles(QueryPluginRolesRequest) returns (QueryPluginRolesResponse);
}

//---------------------------------------------------------
// Resource service enables HTTP-style requests over gRPC.
//---------------------------------------------------------

service Resource {
  rpc CallResource(CallResourceRequest) returns (stream CallResourceResponse);
}

message StringList {
  repeated string values = 1;
}

message CallResourceRequest {
  PluginContext pluginContext = 1;
  string path = 2;
  string method = 3;
  string url = 4;
  map<string,StringList> headers = 5;
  bytes body = 6;
}

message CallResourceResponse {
  int32 code = 1;
  map<string,StringList> headers = 2;
  bytes body = 3;
}

//-----------------------------------------------
// Data
//-----------------------------------------------

service Data {
  rpc QueryData(QueryDataRequest) returns (QueryDataResponse);
}

message TimeRange {
  int64 fromEpochMS = 1;
  int64 toEpochMS = 2;
}

message DataQuery {
  string refId = 1;
  int64 maxDataPoints = 2;
  int64 intervalMS = 3;
  TimeRange timeRange = 4;
  bytes json = 5;
  string queryType = 6;
}

// QueryDataRequest
message QueryDataRequest {
  PluginContext pluginContext = 1;

  // Environment info
  map<string,string> headers = 2;

  // List of data queries
  repeated DataQuery queries = 3;
}

message QueryDataResponse {
  // Map of refId to response
  map<string,DataResponse> responses = 1;
}

message DataResponse {
  // Arrow encoded DataFrames
  // Frame has its own meta, warnings, and repeats refId
  repeated bytes frames = 1;
  string error = 2;
  bytes jsonMeta = 3; // Warning: Current ignored by frontend. Would be for metadata about the query.
}

//-----------------------------------------------
// Diagnostics
//-----------------------------------------------

service Diagnostics {
  rpc CheckHealth(CheckHealthRequest) returns (CheckHealthResponse);
  rpc CollectMetrics(CollectMetricsRequest) returns (CollectMetricsResponse);
}

message CollectMetricsRequest {
  PluginContext pluginContext = 1;
}

message CollectMetricsResponse {
  message Payload {
    bytes prometheus = 1;
  }

  Payload metrics = 1;
}

message CheckHealthRequest {
  PluginContext pluginContext = 1;

  // Environment info
  map<string,string> headers = 2;
}

message CheckHealthResponse {
  enum HealthStatus {
    UNKNOWN = 0;
    OK = 1;
    ERROR = 2;
  }

  HealthStatus status = 1;
  string message = 2;
  bytes jsonDetails = 3;
}

//-----------------------------------------------------------------
// Stream -- EXPERIMENTAL and is subject to change until 8.0
//-----------------------------------------------------------------

service Stream {
  // SubscribeStream called when a user tries to subscribe to a plugin/datasource
  // managed channel path â€“ thus plugin can check subscribe permissions and communicate
  // options with Grafana Core. When the first subscriber joins a channel, RunStream
  // will be called.
  rpc SubscribeStream(SubscribeStreamRequest) returns (SubscribeStreamResponse);

  // RunStream will be initiated by Grafana to consume a stream. RunStream will be
  // called once for the first client successfully subscribed to a channel path.
  // When Grafana detects that there are no longer any subscribers inside a channel,
  // the call will be terminated until next active subscriber appears. Call termination
  // can happen with a delay.
  rpc RunStream(RunStreamRequest) returns (stream StreamPacket);

  // PublishStream called when a user tries to publish to a plugin/datasource
  // managed channel path. Here plugin can check publish permissions and
  // modify publication data if required.
  rpc PublishStream(PublishStreamRequest) returns (PublishStreamResponse);
}

message SubscribeStreamRequest {
  PluginContext pluginContext = 1;

  // path part of channel.
  string path = 2;
  // optional raw data. May be used as an extra payload supplied upon subscription.
  // For example, can contain JSON query object.
  bytes data = 3;
}

message SubscribeStreamResponse {
  enum Status {
    OK = 0;
    NOT_FOUND = 1;
    PERMISSION_DENIED = 2;
  }
  // status of subscribe response.
  Status status = 1;

  // JSON-encoded data to return to a client in a successful
  // subscription result.
  // For data frame streams this can be a JSON-encoded frame schema.
  bytes data = 2;
}

message PublishStreamRequest {
  PluginContext pluginContext = 1;

  // path part of a channel.
  string path = 2;
  // data that user wants to publish into a stream
  // (only JSON-encoded at the moment).
  bytes data = 3;
}

message PublishStreamResponse {
  enum Status {
    OK = 0;
    NOT_FOUND = 1;
    PERMISSION_DENIED = 2;
  }
  // status of publish response.
  Status status = 1;

  // JSON-encoded data to publish into a channel. This can be
  // unmodified data from a PublishRequest or any modified data.
  // If empty data returned here then Grafana won't publish data
  // to a channel itself but will return a successful result to a
  // client (supposing plugin published data to a channel itself).
  bytes data = 2;
}

message RunStreamRequest {
  PluginContext pluginContext = 1;

  // path part of a channel.
  string path = 2;
  // optional raw data. May be used as an extra payload supplied upon subscription.
  // For example, can contain JSON query object.
  bytes data = 3;
}

message StreamPacket {
  // JSON-encoded data to publish into a channel.
  bytes data = 1;
}
